--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -8,6 +8,10 @@
         "clean-webpack-plugin": "2.0.1",
         "css-loader": "2.1.1",
         "html-webpack-plugin": "3.2.0",
-        "style-loader": "0.23.1"
+        "style-loader": "0.23.1",
+        "awesome-typescript-loader": "5.2.1"
+    },
+    "dependencies": {
+        "normalize.css":"8.0.1"
     }
 }
